--- a/math_sem1.tex
+++ b/math_sem1.tex
@@ -764,7 +764,27 @@ $ \exists c > 0, \forall x \in [a;b]: |f(x)| \leq c $
     Непрерывная на $[a; b]$ функция достинает на нём своего максимального и минимального значений.
 \end{thm}
 
-\chapter{DPMW}
+\chapter {Теорема Коши о прохождении через ноль. Теорема Коши о промежуточном значении}
+\section{Теорема Больцано-Коши о среднем значении}
+Пусть функция $y = f(x)$ непрерывна на отрезке [a;b] и пусть $f(a)\neq f(b)$. Тогда для любого числа с: $c \in (f(a); f(b)), \exists \xi \in [a; b]: f(\xi)=c$
+\\(Для определенности предположем, что $f(a)<f(b)$)
+\subsection{Доказательство}
+Рассмотрим $x_0$ -середина отрезка $[a;b]$. Возможны 2 случая:
+\begin{enumerate}
+\item $f(x_0)=c \Rightarrow \xi=x_0 \Rightarrow$ доказано
+\item $f(x_0)\neq c \Rightarrow [a_1;b_1]$ - половина $[a;b]$, для которой $f(a_1)<c<F(b_1)$
+$x_1$ - середина $[a_1;b_1]$, если $f(x_1)=c\Rightarrow x_1=\xi$. А если $f(x_1)\neq c \Rightarrow [a_2; b_2], f(a_2)<c<f(b2)$
+\\\textit{Продолжим этот процесс}\\
+В результате мы либо через число шагов найдем $x_n:f(x_n)=c\Rightarrow \xi=x_1$, либо построим совокупность вложенных отрезков $[a;b]>[a_1;b_1]>...>[a_n;b_n]>...$\\
+$f(a_n)<c<f(b_n)$\\
+В этом случае, по теореме Кантора о вложенных стяг. отрезках $\exists a_0 \in [a;b]; a_0=\lim \limits_{n \rightarrow \infty}a_n=\lim \limits_{n \rightarrow \infty}b_n$\\
+Перейдя к пределу в последнем двойном неравенстве и, учитывая непрерывность функции, получим, что:\\
+$f(a_0)=c\Rightarrow \xi=a_0 \in [a;b]$
+\end{enumerate}
+\section{Важное следствие}
+Из теоремы Больцано-Коши очевидным образом вытекает следствие:
+Пусть функция $y=f(x)$ непрерывна на отрезке $[a;b]$ и пусть значения $f(a)$ и $f(b)$ имеют различные знаки. Тогда найдется точка $\xi \ in [a;b]: f(\xi)=0$, т.е. график пересекает ось Ох в некоторой точке отрезка $[a;b]$.
+
 
 \chapter{Производная функции, односторонние производные}
 
@@ -854,9 +874,31 @@ $x_1 - x_0 = \Delta x, f(x_1) - f(x_0) = \Delta f(x_0) \\ f'(x_0) = lim_{\Delta 
   \item $(f^{-1}(y))' = \frac{1}{f'(x)}$ при $y = f(x)$
   \item $f'(x) = \frac{1}{f^{-1}(y)}$ при $y = f(x)$
 \end{itemize}
-
-\chapter{DPMW}
-\pagebreak
+\chapter{Уравнение касательной и нормали к графику функции}
+\textbf{Не найдено в конспекте. Собрано из интернета}\\
+Предположим, что ф-я $y=f(x)$ определена на интервале $(a,b)$ и непрерывна в точке $x_0 \in (a,b)$. В этой точке функция имеет значение $y_0=f(x_0)$.
+Пусть независимая переменная в точке $x_0$ получает приращение $\Delta x$. Соответствующее приращение функции $\Delta y$ выражается формулой $\Delta y = f(x0+ \Delta x) - f(x_0)$.
+На рисунке 1 точка $M_1$ имеет координаты $(x_0+\Delta x,y_0+\Delta y)$.\\
+ Построим секущую $MM_1$. Ее уравнение имеет вид $y - y_0=k(x-x_0)$, где $k$ - угловой коэффициент, зависящий от приращения $\Delta x$
+   и равный $k=k(\Delta x)=\Delta y\Delta x$. При уменьшении $\Delta x$ точка $M_1$ стремится к точке $M: M1\rightarrow M$. В пределе $\Delta x\rightarrow 0$ расстояние между точками $M$ и $M_1$ стремится к нулю. Это следует из непрерывности функции $f(x)$ в точке $x_0$:\\
+   $\lim \limits_{\Delta x \rightarrow 0}\Delta y = 0, \Rightarrow \lim \limits_{\Delta x \rightarrow 0}|MM_1|=\lim \limits_{\Delta x \rightarrow 0}\sqrt{(\Delta x)^2 + (\Delta y)^2}=0$\\
+   Предельное положение секущей $MM_1$ как раз и представляет собой касательную прямую к графику функции $y=f(x)$ в точке $M$.\\
+   Возможны два вида касательных - наклонные и вертикальные. \\
+   Если существует конечный предел $\lim \limits_{\Delta x \rightarrow 0}k(\Delta x)=k_0$, то прямая, имеющая уравнение\\
+   $y-y_0=k(x-x_0),$ называется наклонной касательной к графику функции $y=f(x)$ в точке $(x_0,y_0)$.\\
+   Если предельное значение $k$ при $\Delta x\rightarrow 0$ является бесконечным: $\lim \limits_{\Delta x \rightarrow 0}k(\Delta x)=\pm \infty$, то прямая, имеющая уравнение $x=x_0$ называется вертикальной касательной к графику функции $y=f(x)$ в точке $(x_0,y_0)$.\\
+   Важно отметить, что 
+   \\$k_0=\lim \limits_{\Delta x \rightarrow 0}k(\Delta x)=\lim \limits_{\Delta x \rightarrow 0}\frac{\Delta y}{\Delta x}=f'(x_0)$, то есть угловой коэффициент касательной равен значению производной функции $f(x0)$ в точке касания $x_0$. Поэтому уравнение наклонной касательной можно записать в таком виде: \\
+   $y-y_0=f'(x_0)(x-x_0)$ или $y=f'(x_0)(x-x_0)+f(x_0)$.
+   \\
+Поскольку угловой коэффициент прямой равен тангенсу угла наклона $\alpha$, который прямая образует с положительным направлением оси абсцисс, то справедливо следующее тройное равенство:\\
+$k=\tan\alpha=f'(x_0)$.\\
+\includegraphics[scale=0.5]{pic1}
+\includegraphics[scale=0.5]{pic2}\\
+ Уравнение нормали в декартовых координатах
+Прямая, перпендикулярная касательной и проходящая через точку касания $(x_0,y_0)$, называется нормалью к графику функции $y=f(x)$ в этой точке (рисунок 2). 
+\\Из геометрии известно, что произведение угловых коэффициентов перпендикулярных прямых равно -1. Поэтому, зная уравнение касательной в точке $(x_0,y_0)$:\\
+$y-y_0=-\frac{1}{f'(x_0)}(x-x_0)$
 
 \chapter[правила дифференцирования]{Основные правила дифференцирования, производные элементарных функций.}
 Так как производная - предел, из свойств пределов можно вывести свойства производных:
@@ -1018,8 +1060,18 @@ $$
 \end{thm}\pagebreak
 
 \chapter{Производные и дифференциалы высших порядков}
-Данная глава находится в разработке, при отсутствии в ней полезной информации (или вообще какой-либо информации вините еврея, араба и немца (с явными расистскими наклонностями)
-\pagebreak
+
+Рассмотрим функцию $y=f(x)$, и предположим, что она дифференцируема, значит для любого х определена $f'(x)$. Таким образом получим первую произвводную. Эта функция также может быть дифференцируема в каждой точке.\\
+Вычислив ее производную, получим вторую производную.
+\\Рассуждая аналогичным образом, можно получить производную любого порядка
+\\$f''(x)=(f'(x))'$\\
+$f^{(n)}(n)=(f^{(n-1)}(x))'$
+\\Аналогично определяются дифференциалы высших порядков\\
+$d^2f(x)=d(df(x))=f''(x)dx^2$\\
+$d^3f(x)=d(d^2f(x))=f'''(x)dx^3$\\
+$d^nf(x)=d(d^{n-1}f(x))=f^{(n)}(x)dx^n$
+\\Производные высших порядков используются для вычисления приблизительных значений функций.
+
 
 \chapter{Дифференцирование функции, заданной параметрически}
 Данная глава находится в разработке, при отсутствии в ней полезной информации (или вообще какой-либо информации вините еврея, араба и немца (с явными расистскими наклонностями)
