--- a/math_sem1.tex
+++ b/math_sem1.tex
@@ -440,7 +440,6 @@ $\Rightarrow \lim_{n \rightarrow \infty}{x_n = a} \Leftrightarrow$ в сколь
 \end{enumerate}
 
 \chapter{Бесконечно малые и бесконечно большие функции\\}
-БНФ не люди
 Пусть функция $y = f(x)$ определена в окрестности $U(x_0)$. Эта функция называется бесконечно малой при $x \rightarrow x_0$, если\\ $\lim\limits_{x\rightarrow x_0}f(x)=0$\\
 А бесконечно большой при $x \rightarrow x_0$ - если\\ $\lim\limits_{x\rightarrow x_0}f(x)=\infty$
 \begin{enumerate}
@@ -453,7 +452,7 @@ $\Rightarrow \lim_{n \rightarrow \infty}{x_n = a} \Leftrightarrow$ в сколь
 \end{enumerate}
 
 \chapter{Монотонные последовательности, теорема Вейкерштрасса\\}
-ебаьт где это в конспекте?
+ну и  где это в конспекте?
 
 \chapter{Число е\\}
 Рассмотрим последовательность $x_n=(1+\frac{1}{n})^n, n \in \mathbb{N}$\\
@@ -689,7 +688,7 @@ $\lim \limits_{x\rightarrow x_0}f(g(x))=f(\lim \limits_{x\rightarrow x_0}g(x))$
 
     Говорят, что $y = f(x)$ бесконечно мала по сравнению $y = g(x)$ при $x \rightarrow x_0$, если
     $\forall \epsilon > 0, \exists \delta > 0, \forall x \in \mathcal{U}_{x_0} : |f(x)| < \\
-    \textcolor{red}{\LARGE{HILFE\_MIR!\_ICH\_HABE\_DAS\_KONSPEKT\_NICHT!}}$ тогда пишут, что
+    \textcolor{red}{\LARGE{странный момент}}$ тогда пишут, что
     $f(x) = o(f(x))$ при $x \rightarrow x_0 \Rightarrow \lim_{x \rightarrow x_0}{|\frac{f(x)}{f(x)}|} = 0 \Leftrightarrow f(x0 = f(x) \cdot \alpha(x))$
     где $\alpha(x)$ - БМФ при $x \rightarrow x_0$.
 
@@ -1078,7 +1077,6 @@ $d^nf(x)=d(d^{n-1}f(x))=f^{(n)}(x)dx^n$
 
 
 \chapter{Дифференцирование функции, заданной параметрически\\}
-Данная глава находится в разработке, при отсутствии в ней полезной информации (или вообще какой-либо информации вините еврея, араба и немца (с явными расистскими наклонностями)
 \pagebreak
 
 \chapter{Локальный экстремум функции, теорема Ферма\\}
