--- a/math_sem1.tex
+++ b/math_sem1.tex
@@ -26,7 +26,7 @@
     linktoc=all,     %set to all if you want both sections and subsections linked
 }
 
-\author{по конспектам лекций Рачковского Н.Н. \\ студентов группы 950501 Кагановича М.М., Поддубного Д.П., Веселова М.С. \\ Под редакцией Куклы Д.И., Каминской М.М., Рябиина С.В.}
+\author{по конспектам лекций Рачковского Н.Н. \\ студентов группы 950501 Кагановича М.М., Поддубного Д.П., Веселова М.С. \\ Под редакцией Рачковского Н.Н. и К^o}
 
 \pagestyle{fancy}
 
