--- a/math_sem1.tex
+++ b/math_sem1.tex
@@ -20,13 +20,7 @@
 \usepackage{subcaption}
 
 
-\usetikzlibrary{patterns}
-\hypersetup{
-    colorlinks=false, %set true if you want colored links
-    linktoc=all,     %set to all if you want both sections and subsections linked
-}
-
-\author{по конспектам лекций Рачковского Н.Н. \\ студентов группы 950501 Кагановича М.М., Поддубного Д.П., Веселова М.С. \\ Под редакцией Рачковского Н.Н., Куклы Д.И., Каминской М.М., Рябиина С.В.}
+\author{по конспектам лекций Рачковского Н.Н. \\ студентов группы 950501 Кагановича М.М., Поддубного Д.П., Веселова М.С. \\ Под редакцией Рачковского Н.Н., Каминской М.М. и К^o}
 
 \pagestyle{fancy}
 
@@ -37,7 +31,8 @@
 \begin{document}
 \title{Ответы на теоретические вопросы к экзамену по математике. \\ Семестр 1, 2019}
 \maketitle
-\tableofcontents
+
+
 
 \chapter{PUBLIC SERVICE ANNOUNCEMENT}
 \begin{center}
@@ -1351,9 +1346,148 @@ $f(x_{0})=\lim_{x \to x_{0}} f(x) = 0$ и $g(x_{0})=\lim_{x \to x_{0}} g(x) = 0$
 Если функция $f\left( x \right)$ дифференцируема на интервале $\left( {a,b} \right)$ и принадлежит к одному из четырех рассмотренных типов
 (т.е. является возрастающей, строго возрастающей, убывающей или строго убывающей), то такая функция называется монотонной на данном интервале. 
 
+\chapter{Комплексные числа и действия над ними. Формы записи комплексного числа}
+\section{Комплексные числа}
+\parМнимой единицей называется число $i$, квадрат которого равен -1
+\\$i^2=-1$\\
+\parЧисло $i$ не является действительным.\\
+\parЕсли существует какое-то действительное число $a(a \in \mathbb{R}),$ то произведение $a\cdot i$ называется мнимым числом. Сумма действительного и мнимомго числа называется комплексным числом:\\
+$a+ib$
+\parПри этом число $a$ называется действительной частью и обозначается $a=Re(a+ib)$, а число $b$ называется мнимой частью и обозначается $b=Im(a+ib)$. Таким образом:\\
+$\forall z: z=Re(x)+i\cdot Im(z)$\
+\parДля любого комплексного числа $z=x+iy$ определено сопряженное ему число $\overline{z}=x-iy$.
+\parДва числа $z_1=x_1+iy_1$ и $z_2=x_2+iy_2$ называются равными друг другу, если равны их действительные и мнимые части:\\
+\begin{equation*}
+ \begin{cases}
+   x_1=x_2, 
+   \\
+   y_1=y_2.
+ \end{cases}
+\end{equation*}\\
+\parЗаметим, что действительные числа являются частным случаем комплексных чисел, у которых мнимая часть равна 0.
+\parДругими словами, это значит, что любое действительное число $x$ представимо в виде $x=x+i\cdot 0$\parНетрудно также видеть, что комплексное число $z$ является действительным $\Leftrightarrow z=\overline{z}$
+\parДействительно:\\
+\begin{equation*}
+z=\overline{z} \Leftrightarrow
+ \begin{cases}
+   x_1=x_2, 
+   \\
+   y_1=y_2.
+ \end{cases} \Leftrightarrow y=0 \Leftrightarrow z \in \mathbb{R}
+\end{equation*}\\
+\section{Действия над комплексными числами}
+\parНад множеством комплексных чисел вводятся операции сложения,вычитания, умножения и деления.
+\parСуммой (разностью) двух комплексных чисел $z_1=x_1+iy_1$ и $z_2=x_2+iy_2$ называется комплексное число $z_1\pm z_2=(x_1 \pm x_2)+i(y_1\pm y_2)$. Т.е. действительная часть $Re(z_1\pm z_2)=Rez_1\pm Rez_2$ и $Im(z_1\pm z_2)=Imz_1\pm Imz_2$. Произведением чисел $z_1$ и $z_2$ называется число $z_1z_2=x_1x_2-y_1y_2+i(y_1x_2+y_2x_1)$
+\parТаким образом произведение двух комплексных чисел вычисляется как произведение двухчленов $x_1+iy_1$ и $x_2+iy_2$ с учетом того, что $i^2=-1$
+\parНетрудно убедиться, что введенные такимо образом операции сложения, вычитания, умножения имеют те же свойства, что и соответствующие операции для вещественных чисел: коммутативность, ассоциативность, дистрибутивность
+\parЧастным двух комплексных чисел $z_1$ и $z_2$ называется такое комплексное число $z$, для которого выполняется равенство $z\cdot z_2=z_1$. Это частное обозначается $\frac{z_1}{z_2}$. Покажем, что для любых комплексных чисел $z_1$ и $z_2$ существует единственное частное $\frac{z_1}{z_2}$:\\
+$\dfrac{z_1}{z_2}=\dfrac{x_1+iy_1}{x_2+iy_2}=\dfrac{(x_1+iy_1)(x_2-iy_2)}{(x_2+iy_2)(x_2+-iy_2)}=\dfrac{x_1x_2+y_1y_2+i(x_2y_1-x_1y_2)}{x_2^2+y_2^2}=\dfrac{x_1x_2+y_1y_2}{x_2^2+y_2^2}+i\cdot \dfrac{x_2y_1-x_1y_2}{x_2^2+y_2^2}$
+\parУбедимся, что полученное число действительно является частным $z\cdot z_2=z_1$:\\
+$(\dfrac{x_1x_2+y_1y_2}{x_2^2+y_2^2}+i\cdot \dfrac{x_2y_1-x_1y_2}{x_2^2+y_2^2})\cdot (x_2+iy_2)=\dfrac{x_1x_2^2+y_1y_2x_2-(-x_1y_2^2+y_1y_2x_2)}{x_2^2+y_2^2}+i\cdot \dfrac{x_1x_2y_2-x_2x_1y_2+x_2^2y_1+y_1y_2^2}{x_2^2+y_2^2}=\dfrac{x_1(x_2^2+y_2^2)}{x_2^2+y_2^2}+i\cdot \dfrac{y_1(x_2^2+y_2^2)}{x_2^2+y_2^2}=x_1+iy_1=z_1$
+\parТаким образом деление комплексных чисел друг на друга осуществляется по следующему правилу:\\
+$\dfrac{z_1}{z_2}=\dfrac{z_1\cdot \overline{z_2}}{z_2\cdot \overline{z_2}}$
+\par Для комплексного числа $z$ определяется модуль этого числа: \\$|z|=\sqrt{x^2+y^2}$. Получаем, что $|z|^2=z\cdot \overline{z}$\\
+$|z|=\sqrt{z\overline{z}}$
+\par Учитывая, что для действительного числа $z$ имеем равенство $z=\overline{z}$, получаем, что модель действительного числа можно понимать как модуль комплексного числа.
+\par Частное комплексных чисел можно вычислять по формуле:\\
+$\dfrac{z_1}{z_2}=\dfrac{z_1\cdot \overline{z_2}}{|z|^2}$
+\parУравнение n-ой степени имеет ровно n корней(комплексных чисел).
+\parСвойства комплексно-сопряженных чисел:\\
+\begin{enumerate}
+	\item $\overline{z_1\pm z_2}=\overline{z_1}\pm \overline{z_2}$
+	\item $\overline{z_1\cdot z_2}=\overline{z_1}\cdot \overline{z_2}$
+	\item $\overline{\dfrac{z_1}{z_2}}=\dfrac{\overline{z_1}}{\overline{z_2}}$
+	\item $\overline{z^n}=\overline{z}^n, n \in \mathbb{N}$
+\end{enumerate}
+ДОКАЗАТЬ ЭТИ СВОЙСТВА\\
+\par Запись $z=x+iy$ называется алгебраической формой комплексного числа.
+\parМножество всех комплексных чисел обозначается $\mathbb{C}$
+\section{Геометрическая интерпритация комплексных чисел}
+\parКомплексные числа допускают геометрическую интерпритацию.\\
+Рассмотрим Декартову систему координат $(Oxy)$
+\parНа горизонтальной оси будем откладывать действительную часть, а на вертикальной - мнимую
+\parЧасто удобно изображать комплексные числа не точками, а радиус-векторами этих точек. Нетрудно видеть, что $|z|=\sqrt{x^2+y^2}$ действительно является длиной соответствующего вектора.
+\\ЗДЕСЬ РИСУНОК РАДИУС-ВЕКТОРА\\
+\par Рассмотрим теперь два комплексных числа $z_1=x_1+iy_1$ и $z_2=x_2+iy_2$
+\par Из геометрической интерпритации видно, что:\\
+\\ЗДЕСЬ РИСУНКИ СЛОЖЕНИЯ И ВЫЧИТАНИЯ ВЕКТОРОВ\\
+$|z_1+z_2|\leq |z_1|+|z_2|$\\
+$|z_1-z_2|\geq |z_1| - |z_2|$
+\par Координатная плоскость, на которой изображены в виде радиус-векторов точек комплексных чисел, называется комплексной плоскостью.
+\section{Тригонометрическая форма записи комплексных чисел}
+СЮДА РИСУНОК УГЛА ФИ\\
+На комплексной плоскости рассмотрим число, равное $z=x+iy$ и угол $\phi$ от положительного направления $Ox$ против часовой стрелки до радиус вектора, который изображает число $z$.\\
+$x=|z|\cos\phi$
+$y=|z|\sin\phi$
+\par Отсюда получим, что $z=|z|cos\phi+i|z|\sin\phi=|z|(cos\phi+i\sin\phi)$, что есть тригонометрическая форма записи комплексного числа.\\
+Учитывая то, что sin и cos периодические с периодом $2\pi$, получаем, что $z=|z|(cos\phi+i\sin\phi)$ определена для бесконечного множества значений угла $\phi$, отличающихся друг от друга на $2\pi$. Множество всех таких значений $\phi$ называется аргументом комплексного числа $z$ и обозначается $Argz$. В этом множестве значений $\phi$ особо рассматриваются значения в промежутка $[-\pi;\pi)$ (иногда $[0; 2\pi)$). Значения из этого промежутка называют главными значениями числа $z$ и оюозначаются $\arg z$.
+\parТаким образом, $Argz = \arg z + 2\pi k, k \in \mathbb{Z}$.
+\parЗаметим, что в качестве $\phi$ можно рассматривать $\phi=\arctg\frac{y}{x}$. Однако учитывая, что множество значений $\arctg$ - $(-\frac{\pi}{2}; \frac{\pi}{2})$, заметим, что если $\phi \in [\frac{\pi}{2}; \pi)$, то $\arg z = \arctg{y}{x}+\pi$\\
+если $\phi \in [\pi;\frac{3\pi}{2})$, то $\arg z = \arctg{y}{x}+\pi$\\
+если $\phi \in [-\frac{\pi}{2}; \frac{\pi}{2})$, то $\arg z = \arctg{y}{x}$\\
+\subsection{Действия над комплексными числами в тригонометрической форме}
+\par Рассмотрим два комплексных числа $z_1=x_1+y_1$ и $z_2=x_2+y_2$, запишем их в тригонометрической форме:\\ $z_1=|z_1|(cos\phi_1+i\sin\phi_1)$\\
+$z_2=|z_2|(cos\phi_2+i\sin\phi_2)$\\
+\par Рассмотрим их произведение:\\ $z_1\cdot z_2=z_1=|z_1|(cos\phi_1+i\sin\phi_1)\cdot z_2=|z_2|(cos\phi_2+i\sin\phi_2)=|z_1||z_2|(\cos\phi_1\cos\phi_2-\sin\phi_1\sin\phi_2+i\cos\phi_1\sin\phi_2+i\cos\phi_2\sin\phi_1)=|z_1||z_2|(\cos(\phi_1+\phi_2)+i\sin(\phi_1+\phi_2))$
+\\ $\Rightarrow$ получаем формулу: $z_1\cdot z_2=|z_1||z_2|(\cos(\phi_1+\phi_2)+i\sin(\phi_1+\phi_2))$\\
+\par С помощью математической индукции можно показать (САМОСТОЯТЕЛЬНО!!!), что:\\ $z_1\cdot z_2\cdot...\cdot z_n=|z_1||z_2|...|z_n|(\cos(\phi_1+\phi_2+...+\phi_n)+i\sin(\phi_1+\phi_2+...+\phi_n)$ 
+\par Рассмотрим случай, если $z_1=z_2=...=z_n$:\\
+$z^n=|z|^n(\cos n\phi+i\sin n\phi)$
+\parКорнем $n$-ой степени комплексного числа $z$ называется такое число $w$, для которого выполняется равенство $w^n=z$. Запишем число $w$ в тригонометрической форме: $w=|w|(\cos\theta+i\sin\theta)$\\
+$w^n=|w|^n(\cos n\theta+i\sin n\theta)=|z|(cos\phi+i\sin\phi)$
+\parОтсюда получаем, что:
+\begin{equation}
+	\begin{cases}
+		|w|^n=|z|,\\
+		n\theta=\phi+w\pi k, k \in \mathbb{Z}
+	\end{cases}
+	\Rightarrow
+	\begin{cases}
+		|w|=\sqrt[n]{|z|},\\
+		\theta=\dfrac{\phi+w\pi k}{n}, k \in \mathbb{Z}
+	\end{cases}
+\end{equation}
+\parЗаметим, что\\
+$\sqrt[n]{z}=\sqrt[n]{|z|}\cdot (\cos\dfrac{\phi+w\pi k}{n}+i\sin\dfrac{\phi+w\pi k}{n})$\\
+различные значения корня получаются при различных значениях $k=0, 1, 2, ..., n-1$
+\parЗаметим, что из-за периодичности sin и cos эти значения могут повторяться
+\subsection{Пример 1}
+тут идут примеры вычислений, не думаю, что они нужны в теории
+\section{Показательная форма записи комплексного числа}
+\subsection{Формула Эйлера}
+\parОбозначим $e^{i\phi}=\cos\phi+i\sin\phi$, а $e^{-i\phi}=\cos\phi-i\sin\phi$ - формула Эйлера\\
+$|e^{i\phi}|=|\cos\phi+i\sin\phi|=\sqrt{\cos^2\phi+\sin^2\phi}=1$\\
+$|e^{-i\phi}|=|\cos\phi-i\sin\phi|=\sqrt{\cos^2\phi+(-\sin\phi)^2}=1$\\
+$e^{i\phi_1}e^{i\phi_2}=(\cos\phi_1+i\sin\phi_1)(\cos\phi_2+i\sin\phi_2)=\cos\phi_1\cos\phi_2-\sin\phi_1\sin\phi_2+i(cos\phi_1\sin\phi_2+\cos\phi_2\sin\phi_1)=\cos(\phi_1+\phi_2)+i\sin(\phi_1+\phi_2)=e^{i(\phi_1+\phi_2)}$\\
+$\dfrac{e^{i\phi_1}}{e^{i\phi_2}}=\dfrac{\cos\phi_1+i\sin\phi_1}{\cos\phi_2+i\sin\phi_2}=\dfrac{\cos\phi_1\cos\phi_2 + \sin\phi_1\sin\phi_2+i(\sin\phi_1\cos\phi_2-\cos\phi_1\sin\phi_2)}{cos^2\phi_2+\sin^2\phi_2}=\cos(\phi_1-\phi_2)+i\sin(\phi_1-\phi_2)=e^{i(\phi_1-\phi_2)}$
+\parТ.о. для функции мнимого аргумента $e^{i\phi}$ выполняются известные свойства показательной функции
+\subsection{Показательная форма}
+\parРассмотрим теперь произвольное комплексное число $z$ и запишем его в показательной форме:\\
+$z=|z|(cos\phi+i\sin\phi)=|z|e^{i\phi}$\\
+Таким образом получили показательную форму записи комплексного числа
+ТАК. ТАМ ДАЛЬШЕ КОМПЛЕКСНЫЕ ФУНКЦИИ И СТРАННЫЕ ТЕОРЕМЫ ПРО НИХ. НО ЭТОГО НИХУЯ НЕТ В ВОПРОСАХ. ОНО ОТНОСИТСЯ СЮДА ИЛИ НЕТ? ТАМ ЕЩЕ ПРИМЕРНО СТОЛЬКО ЖЕ ТЕКСТА КАК ЗДЕСЬ НАПИСАНО
+\chapter{Извлечение корня из комплексного числа}
+\parКорнем $n$-ой степени комплексного числа $z$ называется такое число $w$, для которого выполняется равенство $w^n=z$. Запишем число $w$ в тригонометрической форме: $w=|w|(\cos\theta+i\sin\theta)$\\
+$w^n=|w|^n(\cos n\theta+i\sin n\theta)=|z|(cos\phi+i\sin\phi)$
+\parОтсюда получаем, что:
+\begin{equation}
+	\begin{cases}
+		|w|^n=|z|,\\
+		n\theta=\phi+w\pi k, k \in \mathbb{Z}
+	\end{cases}
+	\Rightarrow
+	\begin{cases}
+		|w|=\sqrt[n]{|z|},\\
+		\theta=\dfrac{\phi+w\pi k}{n}, k \in \mathbb{Z}
+	\end{cases}
+\end{equation}
+\parЗаметим, что\\
+$\sqrt[n]{z}=\sqrt[n]{|z|}\cdot (\cos\dfrac{\phi+w\pi k}{n}+i\sin\dfrac{\phi+w\pi k}{n})$\\
+различные значения корня получаются при различных значениях $k=0, 1, 2, ..., n-1$
+\parЗаметим, что из-за периодичности sin и cos эти значения могут повторяться
+\subsection{Пример 1}
+тут идут примеры вычислений, не думаю, что они нужны в теории
 
-
-\setcounter{chapter}{31}
 \chapter[Неопределённый интеграл]{Неопределённый интеграл и его свойства\\}
 \section[Первообразная]{Понятие первообразной}
 Пусть $y = f(x)$ - непрерывная функция, Первообразной для $f(x)$ является $F(x): F'(x) = f(x)$
@@ -2034,6 +2168,8 @@ no    \end{subfigure}
   \frac{x^2}{a^2} = 2(z + \frac{h^2}{b^2})
 \end{equation}
 Это парабола, сдвигающаяся вниз
+
+\tableofcontents
 
 \end{document}
 %% 22 27
