--- a/math_sem1.tex
+++ b/math_sem1.tex
@@ -721,7 +721,58 @@ $\lim \limits_{x\rightarrow x_0}f(g(x))=f(\lim \limits_{x\rightarrow x_0}g(x))$
 
     \setcounter{chapter}{13}
     \chapter{Точки разрыва}
-    закопипастить %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%5
+    
+	Классификация точек разрыва:
+\begin{enumerate}
+    \item Если существуют и конечны оба односторонних пределаи эти односторонние пределы не равны друг другу, то эта точка - точка разрыва
+          первого рода.
+    \item Если функции справа равен пределу слева и не равен значению функции в точке, это точка устранимого разрыва.
+          $lim_{x \rightarrow x_0+0}{f(x)} = lim_{x \rightarrow x_0-0}{f(x)} \neq f(x_0)$
+    \item Если хотя бы один из односторонних пределов бесконечен или не существует - точка разрыва второго рода
+\end{enumerate}
+
+\pgfplotsset{every axis/.append style={
+        axis x line=middle,    % put the x axis in the middle
+        axis y line=middle,    % put the y axis in the middle
+        axis line style={<->}, % arrows on the axis
+        xlabel={$x$},          % default put x on x-axis
+        ylabel={$y$},          % default put y on y-axis
+        title = Точки разрыва
+        }}
+    \begin{tikzpicture}
+    \begin{axis}[
+    xmin=-5,xmax=5,
+    ymin=-5,ymax=5]
+    \addplot [red,thick, domain=-4:2] expression {-3};
+    \addplot [blue,thick, domain=2:5] expression {0.2*x + 3};
+    \addplot [black, dashed] coordinates {(2,-3) (2, 3.1)};
+    \draw (700,840) circle[radius=2pt];
+    \draw (700,200) circle[radius=2pt];
+    \node[text width=6cm, anchor=west, right] at (0, 40) {первого рода};
+    \end{axis}
+    \end{tikzpicture}
+    \begin{tikzpicture}
+        \begin{axis}[
+        xmin=-5,xmax=5,
+        ymin=-5,ymax=5]
+        \addplot [blue,thick, domain=-4:1.9] expression {0.2*x + 3};
+        \addplot [blue,thick, domain=2.1:5] expression {0.2*x + 3};
+        \addplot [black, dashed] coordinates {(2,1) (2, 3.1)};
+        \draw (700,840) circle[radius=2pt];
+        \draw [fill] (700,600) circle[radius=2pt];
+        \node[text width=6cm, anchor=west, right] at (600, 60) {устранимого \\ разрыва};
+        \end{axis}
+        \end{tikzpicture} \\
+        \begin{tikzpicture}
+            \begin{axis}[
+            xmin=-5,xmax=5,
+            ymin=-5,ymax=5]
+            \addplot [blue,thick, domain=-4:1.9] expression {0.2*x + 3};
+            \addplot [blue,thick, domain=2.1:5] expression {1/(x-2)};
+            \addplot [black, dashed] coordinates {(2,-5) (2, 5)};
+            \node[text width=6cm, anchor=west, right] at (0, 20) {второго рода};
+            \end{axis}
+            \end{tikzpicture}
 
 
     \setcounter{chapter}{14}
